# hermes

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  justfile  package.json  pnpm-lock.yaml  release.config.mjs
.circleci/: config.yml
e2e/: Cargo.toml
e2e/src/: lib.rs
src/: client.rs  lib.rs  nvim.rs
src/apc/: client.rs  error.rs  mod.rs
src/apc/agent/: copilot.rs  mod.rs
src/apc/connection/: mod.rs  stdio.rs
src/apc/handler/: mod.rs
src/nvim/: api.rs  mod.rs  producer.rs  state.rs
src/nvim/api/: connect.rs
src/nvim/event/: available_commands.rs  config_option.rs  current_mode.rs  mod.rs  plan.rs  tool_call.rs  tool_call_content.rs  tool_call_update.rs
src/nvim/event/communication/: image.rs  mod.rs  resource.rs  resource_link.rs  text.rs
src/nvim/parse/: annotations.rs  config_option.rs  tool_call.rs  tool_call_content.rs  tool_call_update.rs
src/nvim/parse/communication/: image.rs  resource.rs  resource_link.rs  text.rs
tests/: copilot_integration_test.rs  integration_test.rs  mod.rs
tests/e2e/: nvim_integration_test.rs
tests/parse/: annotations.rs  available_commands.rs  communication_image.rs  communication_resource.rs  communication_resource_link.rs  communication_text.rs  config_option.rs  current_mode.rs  mod.rs  plan.rs  tool_call.rs  tool_call_content.rs  tool_call_update.rs
