[package]
name = "hermes"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
agent-client-protocol = "0.9.4"
nvim-oxi = { version = "0.6.0", features = ["neovim-0-10"] }
nvim-utils = "0.1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
